tests/test_assets/semantic/invalid/strings/return_size.cog
// semantic error at line 2: string literal requires destination array size 6, got 4
// 1 semantic error generated.

test::() -> u8[4] {
    return "hello";
}