tests/test_assets/semantic/invalid/strings/return_size.expected
semantic error at line 5: string literal requires destination array size 6, got 4
1 semantic error generated.
